tests/generics_named_type_args_bad.stderr
tests/generics_named_type_args_bad.sl:6:2: error: SL2004: type mismatch
