tests/generics_named_type_args_bad.sl
struct Vector[T] {
	x T
}

fn main() {
	Vector{ x: 1 }
}
